--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     <div class="container">
+        <div class="cover"></div>
         <form action="#">
             <div class="conteudo-form">
                 <div class="form-login">
@@ -28,8 +29,9 @@
                         <div class="button input-box">
                             <input type="submit" value="Enviar">
                         </div>
+                        <div class="label">Ainda não tem uma conta? <a href="#" title="Criar conta">Clique aqui para criar uma.</a></div>
                     </div>
-            </div>
+                </div>
             </div>
         </form>
     </div>
