--- a/index.html
+++ b/index.html
@@ -4,14 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formulário de Login e Registro</title>
+    <title>Formulário de Login e Registro em HTML e CSS</title>
     <link rel="stylesheet" href="/style.css">
     <!-- Fontawesome CDN Link -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
 </head>
 <body>
     <div class="container">
-        <div class="cover"></div>
+        <input type="checkbox" id="flip">
+       <div class="cover">
+            <div class="frente">
+                <img src="./img/pexels-antoni-shkraba-7163399.jpg" alt="">
+                <div class="texto">
+                    <span class="texto-1">Fazer sempre novos amigos é uma nova aventura</span>
+                    <span class="texto-2">Vamos nos conectar</span>
+               </div>
+            </div>
+       </div>
         <form action="#">
             <div class="conteudo-form">
                 <div class="form-login">
@@ -23,13 +32,37 @@
                         </div>
                         <div class="input-box">
                             <i class="fas fa-key"></i>
-                            <input type="text" placeholder="Digite sua senha" required>
+                            <input type="password" placeholder="Digite sua senha" required>
                         </div>
                         <div class="texto"><a href="#">Esqueceu sua senha?</a></div>
                         <div class="button input-box">
                             <input type="submit" value="Enviar">
                         </div>
-                        <div class="label">Ainda não tem uma conta? <a href="#" title="Criar conta">Clique aqui para criar uma.</a></div>
+                        <div class="texto login-texto">Ainda não tem uma conta? <label for="flip">Clique aqui.</label></div>
+                    </div>
+                </div>
+                <div class="form-cadastrar">
+                    <div class="titulo">Inscrever-se</div>
+                    <div class="input-boxes">
+                        <div class="input-box">
+                            <i class="fas fa-user"></i>
+                            <input type="text" placeholder="Digite seu nome" required>
+                        </div>
+                        <div class="input-box">
+                            <i class="fas fa-envelope"></i>
+                            <input type="text" placeholder="Digite seu email" required>
+                        </div>
+                        <div class="input-box">
+                            <i class="fas fa-key"></i>
+                            <input type="password" placeholder="Digite sua senha" required>
+                        </div>
+                        <div class="texto">
+                            <a href="#">Esqueceu sua senha?</a>
+                        </div>
+                        <div class="button input-box">
+                            <input type="submit" value="Enviar">
+                        </div>
+                        <div class="texto cadastrar-texto">Já tem uma conta? <label for="flip">Fazer login.</label></div>
                     </div>
                 </div>
             </div>
